--- a/UF1_Proyecto/app/src/main/res/values/colors.xml
+++ b/UF1_Proyecto/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="mainOrange">#EA6736</color>
+    <color name="darkBlue">#075A8F</color>
+    <color name="lightBlue">#0AC6CC</color>
 </resources>
