--- a/UF1_Proyecto/app/src/main/res/values/themes.xml
+++ b/UF1_Proyecto/app/src/main/res/values/themes.xml
@@ -2,7 +2,9 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.UF1_Proyecto" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/mainOrange</item>
+        <item name="colorPrimaryVariant">@color/darkBlue</item>
+        <item name="colorAccent">@color/lightBlue</item>
     </style>
 
     <style name="Theme.UF1_Proyecto" parent="Base.Theme.UF1_Proyecto" />
