--- a/UF1_Proyecto/app/src/main/res/layout/fragment_calendar.xml
+++ b/UF1_Proyecto/app/src/main/res/layout/fragment_calendar.xml
@@ -10,7 +10,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Inbox"
+        android:text="Calendar"
         android:textSize="20dp"/>
 
 </FrameLayout>
