--- a/UF1_Proyecto/app/src/main/res/menu/menu_toolbar.xml
+++ b/UF1_Proyecto/app/src/main/res/menu/menu_toolbar.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
     <item android:id="@+id/helpFragment"
-        android:icon="@android:drawable/ic_menu_info_details"
+        android:icon="@android:drawable/star_big_on"
         android:title="@string/info_txt"
         app:showAsAction="always"
         />
