--- a/UF1_Proyecto/app/src/main/res/values/colors.xml
+++ b/UF1_Proyecto/app/src/main/res/values/colors.xml
@@ -4,6 +4,6 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="mainOrange">#EA6736</color>
-    <color name="darkBlue">#075A8F</color>
+    <color name="darkBlue">#982B09</color>
     <color name="lightBlue">#0AC6CC</color>
 </resources>
