--- a/UF1_Proyecto/app/src/main/res/values/colors.xml
+++ b/UF1_Proyecto/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
 
     <color name="mainOrange">#EA6736</color>
     <color name="darkBlue">#982B09</color>
-    <color name="lightBlue">#0AC6CC</color>
+    <color name="lightBlue">#035EE6</color>
 </resources>
