--- a/UF1_Proyecto/app/src/main/res/layout/fragment_recommendations.xml
+++ b/UF1_Proyecto/app/src/main/res/layout/fragment_recommendations.xml
@@ -3,14 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MapFragment"
-    android:orientation="vertical">
+    tools:context=".RecommendationsFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Map"
-        android:textSize="20dp"/>
+        android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
