--- a/UF1_Proyecto/app/src/main/res/menu/menu_main.xml
+++ b/UF1_Proyecto/app/src/main/res/menu/menu_main.xml
@@ -2,32 +2,42 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!-- Resalte de elemento seleccionado -->
-    <group android:checkableBehavior="single" >
-        <item
-            android:id="@+id/citiesFragment"
-            android:icon="@android:drawable/ic_dialog_email"
-            android:title="@string/cities"
-            app:showAsAction="always" />
-        <item
-            android:id="@+id/messageFragment"
-            android:icon="@android:drawable/ic_menu_send"
-            android:title="@string/countries"
-            app:showAsAction="always" />
-    </group>
 
-    <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/transportFragment"
-            android:icon="@android:drawable/ic_dialog_email"
-            android:title="@string/transport"
-            app:showAsAction="always" />
-        <item
-            android:id="@+id/stayFragment"
-            android:icon="@android:drawable/ic_menu_send"
-            android:title="@string/stay"
-            app:showAsAction="always" />
-    </group>
+
+    <item android:title="@string/where">
+        <menu>
+            <item
+                android:id="@+id/citiesFragment"
+                android:icon="@android:drawable/ic_dialog_email"
+                android:title="@string/cities"
+                app:showAsAction="always" />
+            <item
+                android:id="@+id/countriesFragment"
+                android:icon="@android:drawable/ic_menu_send"
+                android:title="@string/countries"
+                app:showAsAction="always" />
+        </menu>
+    </item>
+
+
+    <item android:title="@string/how">
+        <menu>
+            <item
+                android:id="@+id/transportFragment"
+                android:icon="@android:drawable/ic_dialog_email"
+                android:title="@string/transport"
+                app:showAsAction="always" />
+            <item
+                android:id="@+id/stayFragment"
+                android:icon="@android:drawable/ic_menu_send"
+                android:title="@string/stay"
+                app:showAsAction="always" />
+
+        </menu>
+    </item>
+
+
+
 
     <item android:title="@string/next_trip">
         <menu>
@@ -38,7 +48,7 @@
                 app:showAsAction="always"/>
             <item
                 android:id="@+id/recommendationsFragment"
-                android:icon="@android:drawable/ic_menu_help"
+                android:icon="@drawable/common_full_open_on_phone"
                 android:title="@string/recommendations"
                 app:showAsAction="always"/>
 
@@ -55,21 +65,6 @@
         </menu>
     </item>
 
-    <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/suitcaseFragment"
-            android:icon="@android:drawable/ic_dialog_email"
-            android:title="@string/suitcase"
-            app:showAsAction="always" />
-        <item
-            android:id="@+id/walletFragment"
-            android:icon="@android:drawable/ic_menu_send"
-            android:title="@string/wallet"
-            app:showAsAction="always" />
-        <item
-            android:id="@+id/albumFragment"
-            android:icon="@android:drawable/ic_menu_send"
-            android:title="@string/album"
-            app:showAsAction="always" />
-    </group>
+
+
 </menu>
