--- a/UF1_Proyecto/app/src/main/res/layout/fragment_cities.xml
+++ b/UF1_Proyecto/app/src/main/res/layout/fragment_cities.xml
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
+    
+    <EditText
+        android:id="@+id/citiesFilter"
+        android:singleLine="true"
+        android:maxLines="1"
+        android:imeOptions="actionDone"
+        android:hint="Buscar cidade"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclercities"
@@ -12,5 +24,5 @@
         android:layout_height="wrap_content"/>
 
 
-</ScrollView>
+</LinearLayout>
 
