--- a/UF1_Proyecto/app/src/main/res/values-night/themes.xml
+++ b/UF1_Proyecto/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.UF1_Proyecto" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+
+        <item name="colorPrimary">@color/mainOrange</item>
+        <item name="colorPrimaryVariant">@color/mainOrange</item>
+        <item name="colorAccent">@color/mainOrange</item>
     </style>
 </resources>
