--- a/UF1_Proyecto/app/src/main/res/layout/fragment_countries.xml
+++ b/UF1_Proyecto/app/src/main/res/layout/fragment_countries.xml
@@ -1,156 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <LinearLayout
+    <EditText
+        android:id="@+id/countriesFilter"
+        android:singleLine="true"
+        android:maxLines="1"
+        android:imeOptions="actionDone"
+        android:hint="Buscar país"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="15dp"
-        >
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/spain"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_gravity="center_horizontal|top"
-                android:layout_marginTop="20dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/spain"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:layout_editor_absoluteX="0dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|center"
-                android:text="Spain"
-                android:textColor="@color/white"
-                android:background="@color/darkBlueTransparent"
-                android:textSize="40sp"
-                android:textStyle="normal"
-                app:layout_constraintBottom_toBottomOf="@+id/spain"
-                app:layout_constraintEnd_toEndOf="@+id/spain"
-                app:layout_constraintStart_toStartOf="@+id/spain"
-                app:layout_constraintTop_toTopOf="@+id/spain" />
-
-            <ImageView
-                android:id="@+id/portugal"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_gravity="center_horizontal|top"
-                android:layout_marginTop="20dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/portugal"
-                app:layout_constraintTop_toBottomOf="@id/spain"
-                tools:layout_editor_absoluteX="0dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|center"
-                android:text="Portugal"
-                android:textColor="@color/white"
-                android:background="@color/darkBlueTransparent"
-                android:textSize="40sp"
-                android:textStyle="normal"
-                app:layout_constraintBottom_toBottomOf="@+id/portugal"
-                app:layout_constraintEnd_toEndOf="@+id/portugal"
-                app:layout_constraintStart_toStartOf="@+id/portugal"
-                app:layout_constraintTop_toTopOf="@+id/portugal" />
-
-            <ImageView
-                android:id="@+id/italy"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_gravity="center_horizontal|top"
-                android:layout_marginTop="20dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/italy"
-                app:layout_constraintTop_toBottomOf="@id/portugal"
-                tools:layout_editor_absoluteX="0dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|center"
-                android:text="Italy"
-                android:textColor="@color/white"
-                android:background="@color/darkBlueTransparent"
-                android:textSize="40sp"
-                android:textStyle="normal"
-                app:layout_constraintBottom_toBottomOf="@+id/italy"
-                app:layout_constraintEnd_toEndOf="@+id/italy"
-                app:layout_constraintStart_toStartOf="@+id/italy"
-                app:layout_constraintTop_toTopOf="@+id/italy" />
-
-            <ImageView
-                android:id="@+id/france"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_gravity="center_horizontal|top"
-                android:layout_marginTop="20dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/france"
-                app:layout_constraintTop_toBottomOf="@id/italy"
-                tools:layout_editor_absoluteX="0dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|center"
-                android:text="France"
-                android:textColor="@color/white"
-                android:background="@color/darkBlueTransparent"
-                android:textSize="40sp"
-                android:textStyle="normal"
-                app:layout_constraintBottom_toBottomOf="@+id/france"
-                app:layout_constraintEnd_toEndOf="@+id/france"
-                app:layout_constraintStart_toStartOf="@+id/france"
-                app:layout_constraintTop_toTopOf="@+id/france" />
-
-            <ImageView
-                android:id="@+id/uk"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_gravity="center_horizontal|top"
-                android:layout_marginTop="20dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/uk"
-                app:layout_constraintTop_toBottomOf="@id/france"
-                tools:layout_editor_absoluteX="0dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|center"
-                android:text="United Kingdom"
-                android:textColor="@color/white"
-                android:background="@color/darkBlueTransparent"
-                android:textSize="40sp"
-                android:textStyle="normal"
-                app:layout_constraintBottom_toBottomOf="@+id/uk"
-                app:layout_constraintEnd_toEndOf="@+id/uk"
-                app:layout_constraintStart_toStartOf="@+id/uk"
-                app:layout_constraintTop_toTopOf="@+id/uk" />
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="wrap_content"/>
 
 
 
-    </LinearLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclercountries"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
-</ScrollView>
 
-
-
-
+</LinearLayout>
 
