--- a/UF1_Proyecto/app/src/main/res/layout/fragment_cities.xml
+++ b/UF1_Proyecto/app/src/main/res/layout/fragment_cities.xml
@@ -14,7 +14,8 @@
         android:imeOptions="actionDone"
         android:hint="Buscar cidade"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        />
 
 
 
