--- a/UF1_Proyecto/app/src/main/res/layout/activity_main.xml
+++ b/UF1_Proyecto/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            app:defaultNavHost="true"
+            app:defaultNavHost="false"
             app:navGraph="@navigation/nav_graph" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
